# authenticate

./: .gitignore  README.md  sources.txt  stack.yaml
.github/workflows/: tests.yml
Web/Authenticate/: OAuth.hs
authenticate/: ChangeLog.md  README.md  authenticate.cabal
authenticate-oauth/: .gitignore  ChangeLog.md  README.md  authenticate-oauth.cabal
authenticate-oauth/Web/Authenticate/: OAuth.hs
authenticate-oauth/Web/Authenticate/OAuth/: IO.hs  UnsafeIO.hs
authenticate/OpenId2/: Discovery.hs
authenticate/Web/Authenticate/: BrowserId.hs  OpenId.hs  Rpxnow.hs
authenticate/Web/Authenticate/OpenId/: Providers.hs
